@@ -212,6 +212,9 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                 case "--enable-native-access":
                     parseNumberedOption(args, "java.EnableNativeAccess", "module");
                     break;
+                case "--illegal-native-access":
+                    espressoOptions.put("java.IllegalNativeAccess", args.getValue(arg, "illegal native access"));
+                    break;
                 case "-m":
                 case "--module":
                     /* This arguments specifies in which module we find the main class. */
@@ -272,10 +275,6 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                 case "-Xshare:auto":
                 case "-Xshare:off":
                     // ignore
-                    break;
-                case "-XX:+UseJVMCICompiler":
-                case "-XX:-UseJVMCICompiler":
-                    getError().println("Ignoring " + arg);
                     break;
 
                 case "-XX:+PauseOnExit":
@@ -432,6 +431,10 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
                     "WhiteBoxAPI",
                     "EnableJVMCI");
 
+    private static final Set<String> ignoredXXOptions = Set.of(
+                    "UseJVMCICompiler",
+                    "EnableDynamicAgentLoading");
+
     private void handleXXArg(String fullArg, ArrayList<String> unrecognized) {
         String arg = fullArg.substring("-XX:".length());
         String name;
@@ -447,6 +450,10 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
             }
             name = arg.substring(0, idx);
             value = arg.substring(idx + 1);
+        }
+        if (ignoredXXOptions.contains(name)) {
+            getError().println("Ignoring " + arg);
+            return;
         }
         if (knownPassThroughOptions.contains(name)) {
             espressoOptions.put("java." + name, value);
